@@ -1,3 +1,10 @@
+2004-01-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b7
+
+	* Bugfix: Changing album permissions who can view comments were broken.
+
+	* Bugfix: When embedded in phpBB2, Permissions for "only logged in" users were broken.
+		  Because phpBB2's anonymous user is also logged in. So we have to ignore this.
+
 2004-01-26  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b6
 
 	* Removed Add Photos from the admin menu
